WebView doesn't become first responder in element fullscreen. https://bugs.webkit.org/show_bug.cgi?id=165664 rdar://problem/28927252

Patch by Jeremy Jones <jeremyj@apple.com> on 2016-12-09
Reviewed by Tim Horton.

WebView was being set as the first responder while the contentView was still hidden.
A view can not become first responder while it or its ancestor is hidden.

This change waits until after the contentView is visible to make the web view the first responder.

* UIProcess/mac/WKFullScreenWindowController.mm:
(-[WKFullScreenWindowController enterFullScreen:]):
(-[WKFullScreenWindowController _startEnterFullScreenAnimationWithDuration:]):

Canonical link: https://commits.webkit.org/183280@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@209624 268f45cc-cd09-0410-ab3c-d52691b4dbfc